# kaalsec

./: .gitignore  README.md  install.sh  product.md  pyproject.toml
kaalsec/: __init__.py  backend.py  cli.py  config.py  history.py  plugins.py  policy.py  reports.py  shell_integration.py  store.py  tools.py
plugins/: README.md  gobuster.yml  nikto.yml  nmap.yml
